--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
@@ -20,6 +20,7 @@
         width: 265px;
         position: fixed;
        // float: left;
+      //  top: 43px;
         top: 43px;
         bottom: 0px;
         border-right: 1px solid #eee;
