--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-nav/category-nav.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-nav/category-nav.component.html
@@ -43,9 +43,9 @@
             </section-divider> -->
             <div  class="menu" [ngClass]="'light-theme'">
             <div id="scroll-container">
-            <section-divider [label]="'Documentation'" [initiallyExpanded]="false" [collapsible]="false" (click)="collapsible = !collapsible">
+            <section-divider [label]="'Diagnostic Report'" [initiallyExpanded]="false" [collapsible]="false" (click)="collapsible = !collapsible">
               <i class="fa fa-book fa-fw menu-icon menu-icon-documentation" aria-hidden="true"></i>
-              <collapsible-menu-item *ngFor="let detector of detectors.subItems" [menuItem]="detector"></collapsible-menu-item>
+              <collapsible-menu-item *ngFor="let detector of detectorList" [menuItem]="detector"></collapsible-menu-item>
             </section-divider>
           </div>
         </div>
