--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-menu-item/category-menu-item.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-menu-item/category-menu-item.component.html
@@ -4,7 +4,7 @@
         <i class="fa" *ngIf="menuItem.icon" [ngClass]="menuItem.icon"></i>
         <span class="menu-label" [innerHtml]="menuItem.label | searchmatch:searchValueLocal"></span>
     </div>
-    <div class="menu-item-children" [@expand]="menuItem.expanded ? 'shown' : 'hidden'">
+    <div class="menu-item-children">
         <!-- [searchValue]="searchValueLocal"  -->
       <collapsible-menu-item *ngFor="let item of menuItem.subItems" [menuItem]="item" [level]="level + 1"></collapsible-menu-item>
     </div>
