--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-menu-item/category-menu-item.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-menu-item/category-menu-item.component.scss
@@ -43,3 +43,8 @@
 .menu-label > b {
     color: #ffb353;
 }
+
+.menu-label {
+    font-size: "13px!important";
+    font-family: "az_ea_font,'Segoe UI',az_font,system-ui,-apple-system,BlinkMacSystemFont,Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif!important";
+}
