--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-menu-item/category-menu-item.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-menu-item/category-menu-item.component.html
@@ -3,8 +3,8 @@
         <i class="fa expand-icon" *ngIf=" menuItem.subItems && menuItem.subItems.length > 0" [class.fa-caret-right]="!menuItem.expanded"
             [class.fa-caret-down]="menuItem.expanded"></i>
         <i class="fa" *ngIf="menuItem.icon" [ngClass]="menuItem.icon"></i>
-        <img class="category-icon" src={{menuItem.icon}} />  
-        <span class="menu-label" [innerHtml]="menuItem.label | searchmatch:searchValueLocal"></span>
+        <img class="category-icon" style="width:18px!important" src={{menuItem.icon}} />  
+        <span class="menu-label" style="font-size: 13px!important" [innerHtml]="menuItem.label | searchmatch:searchValueLocal"></span>
     </div>
     <div class="menu-item-children">
         <!-- [searchValue]="searchValueLocal"  -->
