--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.scss
@@ -51,7 +51,8 @@
 .menu-label {
     position: relative;
     padding-left: 4px;
-    font-size:13px;
+    font-size:12px;
+    font-weight: 600;
 }
 
 .menu-expand-icon {
