Add chat option in analysis view.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.scss
@@ -91,6 +91,10 @@
     margin-bottom: 20px;
 }
 
+.align-width {
+    width: 98%;
+}
+
 .detector-list {
     background: #f9f9f9;
     border: 1px solid #ebebeb;
