Open blade for each category tile

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
@@ -71,11 +71,11 @@ React refresh bug test
 
 
 <div class="App">
-  <div class="header">
+  <!-- <div class="header">
     <span class="category-label">{{categoryName}}</span>
     <br />
     <span class="category-description">Diagnose and solve problems</span>
-  </div>
+  </div> -->
   <div class="body-content" style="border:bold; color:black">
     <section class="sidebar">
      <category-nav></category-nav>
