--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
@@ -21,7 +21,6 @@
         position: fixed;
        // float: left;
       //  top: 43px;
-        top: 43px;
         bottom: 0px;
         border-right: 1px solid #eee;
         overflow-y: scroll;
@@ -30,7 +29,7 @@
       section.content {
         position: fixed;
         width:85%;
-        top: 43px;
+        // top: 43px;
         bottom: 0px;
         left: 265px;
         overflow-y: auto;
