--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.html
@@ -1,4 +1,4 @@
-<div class="section-divider" [class.not-expandable]="!collapsible" (click)="expanded = !expanded">
+<div class="section-divider" [class.not-expandable]="!collapsible" [class.selected]="isSelected()" (click)="sectionHeaderClick()">
     <div>
       <ng-content select=".menu-icon"></ng-content>
       </div>
