--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/section-divider/section-divider.component.scss
@@ -16,6 +16,12 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    margin-left: 24px;
+    margin-right:24px;
+}
+
+.section-divider.selected {
+    background-color: #edebe9;
 }
 
 /* DARK THEME */
