--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
@@ -20,7 +20,7 @@
         width: 265px;
         position: fixed;
        // float: left;
-      //  top: 43px;
+        top: 0px;
         bottom: 0px;
         border-right: 1px solid #eee;
         overflow-y: scroll;
@@ -30,6 +30,7 @@
         position: fixed;
         width:85%;
         // top: 43px;
+        top: 0px;
         bottom: 0px;
         left: 265px;
         overflow-y: auto;
