Update Genie Icon

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
@@ -18,3 +18,11 @@
     margin-bottom: 15px;
 }
 
+.genie {
+    height: 20px;
+    width: 20px;
+    background: #0078d4;
+    margin-right: 5px;
+    border-radius: 10px;
+}
+
