--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles/main.scss";
+
 .category-container{
     margin: 25px 30px;
 }
@@ -24,5 +26,25 @@
     background: #0078d4;
     margin-right: 5px;
     border-radius: 10px;
+}
+
+.genie-message {
+    position: absolute;
+    right: 0px;
+    width: 461px;
+    background-color: #0078D4;;
+    transition: transform $ms-motion-duration-4;
+    color: white;
+    border-radius: 15px;
+}
+
+.chat-message {
+    position: absolute;
+    right: 0px;
+    width: 461px;
+    background-color: #0078D4;;
+    transition: transform $ms-motion-duration-4;
+    color: white;
+    border-radius: 15px;
 }
 
