--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
@@ -33,7 +33,7 @@
     right: 0px;
     width: 461px;
     background-color: #0078D4;;
-    transition: transform $ms-motion-duration-4;
+  //  transition: transform $ms-motion-duration-4;
     color: white;
     border-radius: 15px;
 }
@@ -43,7 +43,7 @@
     right: 0px;
     width: 461px;
     background-color: #0078D4;;
-    transition: transform $ms-motion-duration-4;
+ //   transition: transform $ms-motion-duration-4;
     color: white;
     border-radius: 15px;
 }
